<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="str_btn_find">Find</string>
    <string-array name="country">
        <item>Country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item> Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Belarus</item>
        <item>Burkina Faso</item>
        <item> Burma</item>
        <item> Burundi</item>
        <item> Cambodia</item>
        <item> Cameroon</item>
        <item> Canada</item>
        <item> Cabo Verde</item>
        <item>Chad</item>
        <item> Chile</item>
        <item> China</item>
        <item> Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Cote d Ivoire</item>
        <item>  Croatia</item>
        <item> Cuba</item>
        <item> Curacao</item>
        <item> Cyprus</item>
        <item> Czechia</item>
        <item> Denmark</item>
        <item> Djibouti</item>
        <item> Dominica</item>
        <item> Dominican</item>
        <item> East Timor</item>
        <item> Ecuador</item>
        <item>  Egypt</item>
        <item>  El Salvador</item>
        <item>  Equatorial Gui</item>nea
        <item>  Eritrea</item>
        <item>  Estonia</item>
        <item>  Ethiopia</item>
        <item>  Fiji</item>
        <item>  Finland</item>
        <item>  France</item>
        <item>  Gabon</item>
        <item> Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item> Ghana</item>
        <item>  Greece</item>
        <item>  Grenada</item>
        <item>  Guatemala</item>
        <item>  Guinea</item>
        <item>  Guinea-Bissau</item>
        <item>  Guyana</item>
        <item>  Haiti</item>
        <item>  Holy See</item>
        <item>  Honduras</item>
        <item>  Hong Kong</item>
        <item>  Hungary</item>
        <item>  Iceland</item>
        <item>  India</item>
        <item>  Indonesia</item>
        <item> Iran</item>
        <item>  Iraq</item>
        <item>  Ireland</item>
        <item> Israel</item>
        <item> Italy</item>
        <item> Jamaica</item>
        <item>  Japan</item>
        <item>  Jordan</item>
        <item> Kazakhstan</item>
        <item>  Kenya</item>
        <item>  Kiribati</item>
        <item>  Korea, North</item>
        <item>  Korea, South</item>
        <item>  Kosovo</item>
        <item>  Kuwait</item>
        <item>  Kyrgyzstan</item>
        <item>  Laos</item>
        <item>  Latvia</item>
        <item>  Lebanon</item>
        <item>  Lesotho</item>
        <item>  Liberia</item>
        <item>  Libya</item>
        <item>  Liechtenstei</item>n
        <item>  Lithuania</item>
        <item>  Luxembourg</item>
        <item>  Macau</item>
        <item>   Macedonia</item>
        <item>   Madagascar</item>
        <item>  Malawi</item>
        <item>  Malaysia</item>
        <item>  Maldives</item>
        <item> Mali</item>
        <item> Malta</item>
        <item>Marshall Islands</item>
        <item>  Mauritania</item>
        <item>  Mauritius</item>
        <item>  Mexico</item>
        <item>  Micronesia</item>
        <item>  Moldova</item>
        <item>  Monaco</item>
        <item>  Mongolia</item>
        <item>  Montenegro</item>
        <item>   Morocco</item>
        <item>  Mozambique</item>
        <item>  Namibia</item>
        <item>  Nauru</item>
        <item>  Nepal</item>
        <item>  Netherlands</item>
        <item>   New Zealand</item>
        <item>   Nicaragua</item>
        <item>   Niger</item>
        <item>   Nigeria</item>
        <item>  North Korea</item>
        <item>  Norway</item>
        <item>  Oman</item>
        <item>  Pakistan</item>
        <item> Palau</item>
        <item>  Palestinian Territories</item>
        <item>  Panama</item>
        <item>  Papua New Guinea</item>
        <item>  Paraguay</item>
        <item>  Peru</item>
        <item>   Philippines</item>
        <item>   Poland</item>
        <item>   Portugal</item>
        <item>   Qatar</item>
        <item>   Romania</item>
        <item> Russia</item>
        <item> Rwanda</item>
        <item>  Saint Kitts and Nevis</item>
        <item>  Saint Lucia</item>
        <item>  Saint Vincent</item>
        <item>  Samoa</item>
        <item>  San Marino</item>
        <item>  Sao Tome and Principe</item>
        <item>  Saudi Arabia</item>
        <item>  Senegal</item>
        <item>  Serbia</item>
        <item>   Seychelles</item>
        <item>   Sierra Leone</item>
        <item>  Singapore</item>
        <item>  Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>  Solomon Islands</item>
        <item>   Somalia</item>
        <item>   South Africa</item>
        <item>   South Korea</item>
        <item>   South Sudan</item>
        <item>   Spain</item>
        <item>   Sri Lanka</item>
        <item>   Sudan</item>
        <item>   Suriname</item>
        <item>   Swaziland</item>
        <item>   Sweden</item>
        <item>   Switzerland</item>
        <item>   Syria</item>
        <item>   Taiwan</item>
        <item>   Tajikistan</item>
        <item>   Tanzania</item>
        <item>   Thailand</item>
        <item>   Timor-Leste</item>
        <item>   Togo</item>
        <item>   Tonga</item>
        <item>   Trinidad and Tobago</item>
        <item>   Tunisia</item>
        <item>   Turkey</item>
        <item>   Turkmenistan</item>
        <item>   Tuvalu</item>
        <item> Uganda</item>
        <item>Ukraine</item>
        <item> United Arab Emirates</item>
        <item> United Kingdom</item>
        <item> Uruguay</item>
        <item> Uzbekistan</item>
        <item> Vanuatu</item>
        <item> Venezuela</item>
        <item> Vietnam</item>
        <item> Yemen</item>
        <item> Zambia</item>
        <item>  Zimbabwe</item>
    </string-array>
    <string name="action_create_new_pattern">Create New Pattern</string>
    <string name="action_check">Check Pattern</string>
    <string name="action_contact">Contact</string>
    <string name="title_activity_change">Change Pattern</string>
    <string name="draw_pattern_msg">Draw new pattern</string>
    <string name="redraw_confirm_pattern_msg">Redraw pattern to confirm</string>
    <string name="title_activity_welcome">Welcome Activity</string>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="enteries">
        <item>Choose Service</item>
        <item>Personal</item>
        <item>Company</item>
    </string-array>
    <string-array name="reports">
        <item>Lost</item>
        <item>Found</item>
    </string-array>
    <string-array name="options">
        <item>Options</item>
        <item>Chat</item>
        <item>Call</item>
        <item>Whislist</item>
    </string-array>
    <string-array name="service">
        <item>Choose</item>
        <item>taxi</item>
        <item>Hotels</item>
        <item>Fuel</item>
        <item>Hospital</item>
    </string-array>
    <string name="device_type">Device Type:</string>
    <string-array name="login_langs">
        <item>choose</item>
        <item>English</item>
        <item>Kinyarwanda</item>
        <item>French</item>
    </string-array>
    <string-array name="login_langsValues">
        <item> </item>
        <item>en</item>
        <item>rw</item>
        <item>fr</item>
    </string-array>
    <string-array name="Languages">
        <item>English</item>
        <item>Kinyarwanda</item>
        <item>French</item>
    </string-array>
    <string-array name="LanguagesValues">
        <item>en</item>
        <item>rw</item>
        <item>fr</item>
    </string-array>
    <string-array name="cardstypes">
        <item>ID Card</item>
        <item>Driving License</item>
        <item>Student Card</item>
    </string-array>
    <string name="app_name">Losafo</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Are You registered? click to register</string>
    <string name="btn_link_to_login">Already registered? click to login</string>
    <string name="btn_register">Register</string>
    <string name="hint_re_password">Re-Type Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_name">Enter Names</string>
    <string name="hint_phone">Enter Phonenumber</string>
    <string name="hint_location">Enter Address</string>
    <string name="todo">TODO</string>
    <string name="logging_in_message">Logging in...</string>
    <string name="hello_lost_fragment">we are on lost fragment</string>
    <string name="hello_found_fragment">we are on found fragment</string>
    <string name="hint_owner_name">Enter Owner\'s Name</string>
    <string name="hint_card_number">Enter Card Number</string>
    <string name="hint_license_number">Enter License Number</string>
    <string name="hint_found_location">Enter Where You Found it</string>
    <string name="hint_lost_location">Enter Where You Losted it</string>
    <string name="btn_report_found">Report Founded Item</string>
    <string name="btn_report_lost">Report Lost Item</string>
    <string name="hint_device_name">Enter Device Name</string>
    <string name="hint_device_model_name">Enter Device Model Name</string>
    <string name="hint_device_serial_number">Enter Serial Number</string>
    <string name="hint_automobile_name">Enter Automobile Name</string>
    <string name="hint_automobile_model_name">Enter Automobile Model Name</string>
    <string name="hint_automobile_plate_number">Enter Plate Number</string>
    <string name="err_owner_name">Please enter owner name</string>
    <string name="err_id_number">Please enter valid Id number</string>
    <string name="err_found_location">Please enter valid found location</string>
    <string name="err_lost_location">Please enter valid lost location</string>
    <string name="err_device_name">Please enter device name</string>
    <string name="err_device_model_name">Please enter device model name</string>
    <string name="err_device_serial_number">Please enter device serial number</string>
    <string name="err_automobile_name">Please enter automobile name</string>
    <string name="err_automobile_model_name">Please enter automobile model name</string>
    <string name="err_automobile_plate_number">Please enter automobile plate number</string>
    <string name="logout">Logout</string>
    <string name="names">Names</string>
    <string name="idnumber">Id Number</string>
    <string name="location">Location</string>
    <string name="automobile_name">Automobile Name :</string>
    <string name="lost_location">Lost Location:</string>
</resources>